--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera!</title>
+	<title>czemu to nie dziala</title>
 </head>
 <body>
-<h1>hello coursera!</h1>
+<h1>gowno</h1>
 </body>
 </html>
